# android_scheme_pattern

./: CMakeLists.txt  README.md  main.cpp  report.md
include/: password_node.hpp  password_space.hpp
include/constexpr_utils/: stack.hpp  utils.hpp
lib/include/: password_node.hpp  password_space.hpp
lib/include/constexpr_utils/: utils.hpp
